video from images

--- a/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output.ipynb
@@ -36,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 171.96it/s]\n",
-      "There are 98 samples in Demo dataset\n"
+      "100%|██████████| 1/1 [00:00<00:00, 174.18it/s]\n",
+      "There are 95 samples in Demo dataset\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "\n",
     "root_dir = '/home/surya/Downloads/transfuser-2022/data/demo/scenario1/'\n",
     "config = GlobalConfig()\n",
-    "demo_set = CARLA_Data(root=root_dir, config=config, routeKey='route0')\n",
+    "demo_set = CARLA_Data(root=root_dir, config=config, routeKey='route2')\n",
     "print(f\"There are {len(demo_set)} samples in Demo dataset\")"
    ]
   },
@@ -153,22 +153,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from collections import OrderedDict\n",
-    "# new_state_dict = OrderedDict()\n",
-    "\n",
-    "# for k,v in checkpt.items():\n",
-    "#     new_key = k.replace(\"module.\", \"\")\n",
-    "#     if new_key != '_model.lidar_encoder._model.stem.conv.weight':\n",
-    "#         new_state_dict[new_key] = v\n",
-    "# torch.save(new_state_dict, 'transfuser_regnet032_seed1_39.pth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def convert_waypoints_to_image(waypoints):\n",
     "    x = 128\n",
     "    y = 256\n",
@@ -194,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def smooth_attention_map(attn_map, reshape_size):\n",
     "    attn_map = attn_map.sum(axis=0)\n",
-    "    attn_map = attn_map / attn_map.sum(axis=1)[:, np.newaxis]\n",
+    "    attn_map = attn_map / np.sum(attn_map)\n",
     "    up_attn = cv2.resize(attn_map, reshape_size)\n",
-    "    smoothed_attn_map = sp.ndimage.filters.gaussian_filter(up_attn, [1,1], mode='constant')\n",
-    "    return smoothed_attn_map"
+    "#     smoothed_attn_map = sp.ndimage.filters.gaussian_filter(up_attn, [1,1], mode='constant')\n",
+    "    return up_attn"
    ]
   },
   {
@@ -253,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Visualizer:\n",
     "    def __init__(self):\n",
-    "        self.fig = plt.figure(figsize=(20, 10))\n",
+    "        self.fig = plt.figure(figsize=(16, 8))\n",
     "        self.fig.suptitle(\"Transfuser output\")\n",
     "        self.fig.tight_layout()\n",
     "        gs = self.fig.add_gridspec(3, 3,  height_ratios = [2,1,1], width_ratios = [2,1,1])\n",
@@ -286,7 +270,7 @@
     "        # rgb image with attention map\n",
     "        self.rgb_axes.imshow(rgb_image)\n",
     "        if img_attn_map is not None:\n",
-    "            self.rgb_axes.imshow(smooth_img_attn_map, cmap='inferno', alpha=0.3)\n",
+    "            self.rgb_axes.imshow(smooth_img_attn_map, cmap='inferno', alpha=0.5)\n",
     "        self.rgb_axes.set(xticks=[], yticks=[])\n",
     "        \n",
     "        # depth image\n",
@@ -304,9 +288,9 @@
     "        # lidar data with waypoints\n",
     "        self.bbox_axes.imshow(lidar_data)\n",
     "        self.bbox_axes.set(xticks=[], yticks=[])\n",
-    "        self.bbox_axes.plot(tgt_points[:,0], tgt_points[:,1], 'go', linewidth =3)\n",
+    "        self.bbox_axes.plot(tgt_points[:,0], tgt_points[:,1], 'go', linewidth =1)\n",
     "        if pred_points is not None:\n",
-    "            self.bbox_axes.plot(pred_points[:,0], pred_points[:,1], 'ro', linewidth =3)\n",
+    "            self.bbox_axes.plot(pred_points[:,0], pred_points[:,1], 'ro', linewidth =1)\n",
     "        \n",
     "        # bounding boxes\n",
     "        for bbox in gt_boxes:\n",
@@ -318,7 +302,7 @@
     "        \n",
     "        # lidar attention map\n",
     "        if lidar_attn_map is not None:\n",
-    "            self.bbox_axes.imshow(lidar_attn_map, cmap='inferno', alpha=0.3)\n",
+    "            self.bbox_axes.imshow(lidar_attn_map, cmap='inferno', alpha=0.5)\n",
     "\n",
     "        self.fig.subplots_adjust(wspace=0, hspace=0)\n",
     "\n",
@@ -330,7 +314,7 @@
     "        self.bbox_axes.clear()\n",
     "        \n",
     "    def saveFigure(self, outputPath):\n",
-    "        self.fig.savefig(outputPath)"
+    "        self.fig.savefig(outputPath, dpi=150)"
    ]
   },
   {
@@ -342,18 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/49 [00:00<?, ?it/s]/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:227: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
+      "  0%|          | 0/48 [00:00<?, ?it/s]/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:227: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
       "  topk_clses = topk_inds // (height * width)\n",
       "/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:229: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
       "  topk_ys = topk_inds // width\n",
-      "100%|██████████| 49/49 [01:57<00:00,  2.39s/it]\n"
+      "100%|██████████| 48/48 [01:59<00:00,  2.49s/it]\n"
      ]
     }
    ],
@@ -397,9 +381,9 @@
     "        pred_boxes = outputs['detections'][i]\n",
     "        rotated_bboxes_pred = [get_rotated_bbox(bbox)[:, :2] for bbox in pred_boxes]\n",
     "        attn_map = np.sum(outputs['attn_map'][i], axis=0)\n",
-    "        image_attn_map = attn_map[0:110, 0:110].reshape(110, 5, 22)\n",
+    "        image_attn_map = attn_map[22:88, :110].reshape(-1, 5, 22)\n",
     "        smooth_img_attn_map = smooth_attention_map(image_attn_map, reshape_size=(704, 160))\n",
-    "        lidar_attn_map = attn_map[110:, 110:].reshape(64, 8, 8)\n",
+    "        lidar_attn_map = attn_map[24:48, 110:].reshape(-1, 8, 8)\n",
     "        smooth_lidar_attn_map = smooth_attention_map(lidar_attn_map, reshape_size=(256, 256))\n",
     "\n",
     "        # plot all data\n",
@@ -407,21 +391,63 @@
     "            bev_image = pred_bev, lidar_data = lidar_data, tgt_points = tgt_waypoints_image, \n",
     "            gt_boxes = rotated_bboxes_gt, pred_points = pred_waypoints_image, \n",
     "            pred_boxes = rotated_bboxes_pred, \n",
-    "            #img_attn_map = smooth_img_attn_map, \n",
-    "            #lidar_attn_map = smooth_lidar_attn_map\n",
+    "            img_attn_map = smooth_img_attn_map, \n",
+    "            lidar_attn_map = smooth_lidar_attn_map\n",
     "       )\n",
-    "\n",
     "        # save figure\n",
-    "        visualizer.saveFigure(f\"outputFolder/Frame{frameIdx}.png\")\n",
+    "        visualizer.saveFigure(f\"testFolder/Frame{frameIdx}.png\")\n",
     "        frameIdx +=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def convert_images_to_video(images_dir, output_video_path, fps : int = 20):\n",
+    "    input_images = [os.path.join(images_dir, *[x]) for x in sorted(os.listdir(images_dir)) if x.endswith('png')]\n",
+    "    \n",
+    "    if(len(input_images) > 0):\n",
+    "        sample_image = cv2.imread(input_images[0])\n",
+    "        height, width, _ = sample_image.shape\n",
+    "        \n",
+    "        # handles for input output videos\n",
+    "        output_handle = cv2.VideoWriter(output_video_path, cv2.VideoWriter_fourcc(*'DIVX'), fps, (width, height))\n",
+    "\n",
+    "        # create progress bar\n",
+    "        num_frames = int(len(input_images))\n",
+    "        pbar = tqdm(total = num_frames, position=0, leave=True)\n",
+    "\n",
+    "        for i in tqdm(range(num_frames), position=0, leave=True):\n",
+    "            frame = cv2.imread(input_images[i])\n",
+    "            output_handle.write(frame)\n",
+    "            pbar.update(1)\n",
+    "\n",
+    "        # release the output video handler\n",
+    "        output_handle.release()\n",
+    "                \n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 95/95 [00:04<00:00, 19.43it/s]\n",
+      "100%|██████████| 95/95 [00:04<00:00, 19.42it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "convert_images_to_video('testFolder/', 'scenario1_route2.mp4')"
+   ]
   }
  ],
  "metadata": {
