--- a/VIT_101/notebooks/vision-transformer-vanilla.ipynb
+++ b/VIT_101/notebooks/vision-transformer-vanilla.ipynb
@@ -423,13 +423,11 @@
     "        return self.pos_drop(x)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        attn_maps = []\n",
     "        x = self.prepare_tokens(x)\n",
     "        for blk in self.blocks:\n",
     "            x, attn_map = blk(x)\n",
-    "            attn_maps.append(attn_map)\n",
     "        x = self.norm(x)\n",
-    "        return x, attn_maps"
+    "        return x, attn_map"
    ]
   },
   {
@@ -440,61 +438,87 @@
    "outputs": [],
    "source": [
     "vit = VisionTransformer(img_size=img_size, patch_size=patch_size, in_chans=3, \n",
-    "                        embed_dim=embed_dim, depth=depth, num_heads=num_heads, mlp_ratio=4)"
+    "                        embed_dim=embed_dim, depth=depth, num_heads=num_heads, mlp_ratio=4)\n",
+    "\n",
+    "vit_output, attn_map = vit(input_data)\n",
+    "vit_output.shape, attn_map.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bde1f981",
+   "metadata": {},
+   "source": [
+    "## Visualize Attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "353c8134",
+   "metadata": {},
+   "source": [
+    "We'll load a pretrained model, and visualized the output on sample images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96c1f652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load pretrained model\n",
+    "checkpoint = torch.load('')\n",
+    "vit.load_state_dict(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bee81422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bee81422",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vit_output, attn_maps = vit(input_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "1c4f4461",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([1, 197, 384]), 12)"
+       "(torch.Size([1, 197, 384]), torch.Size([1, 6, 197, 197]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03403d95",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "vit_output.shape, len(attn_maps)"
+    "vit.eval();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bfd03e34",
+   "id": "2871108a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197]),\n",
-       " torch.Size([1, 6, 197, 197])]"
+       "_IncompatibleKeys(missing_keys=[], unexpected_keys=['head.mlp.0.weight', 'head.mlp.0.bias', 'head.mlp.2.weight', 'head.mlp.2.bias', 'head.mlp.4.weight', 'head.mlp.4.bias', 'head.last_layer.weight_g', 'head.last_layer.weight_v'])"
       ]
      },
      "execution_count": 17,
@@ -503,16 +527,287 @@
     }
    ],
    "source": [
-    "[x.shape for x in attn_maps]"
+    "checkpt = torch.load('/home/surya/Downloads/dino_deitsmall16_pretrain_full_checkpoint.pth')['student']\n",
+    "state_dict = {k.replace(\"module.\", \"\"): v for k, v in checkpt.items()}\n",
+    "state_dict = {k.replace(\"backbone.\", \"\"): v for k, v in state_dict.items()}\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d943b0ce",
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "01d55e3e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Visualize Attention"
+    "state_dict = {k:v for k, v in state_dict.items() if 'head.' not in k}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "687d770a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vit.load_state_dict(state_dict, strict=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8d501df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(state_dict, 'vit_small_16_dino_backbone.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eb45ba97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from PIL import Image\n",
+    "\n",
+    "# with open('../assets/test_image.jpg', 'rb') as f:\n",
+    "#     img = Image.open(f)\n",
+    "#     img = img.convert('RGB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d232d9cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from torchvision import transforms as pth_transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7a90a21b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform = pth_transforms.Compose([\n",
+    "#     pth_transforms.Resize([224, 224]),\n",
+    "#     pth_transforms.ToTensor(),\n",
+    "#     pth_transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
+    "# ])\n",
+    "# img = transform(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "68100a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c5de4eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # make the image divisible by the patch size\n",
+    "# w, h = img.shape[1] - img.shape[1] % patch_size, img.shape[2] - img.shape[2] % patch_size\n",
+    "# img = img[:, :w, :h].unsqueeze(0)\n",
+    "\n",
+    "# w_featmap = img.shape[-2] // patch_size\n",
+    "# h_featmap = img.shape[-1] // patch_size\n",
+    "\n",
+    "# _, attentions = vit(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bf3224bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attentions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2dd24be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # nh = attentions.shape[1] # number of head\n",
+    "\n",
+    "# # we keep only the output patch attention\n",
+    "# attentions = attentions[0, :, 0, 1:].reshape(nh, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8604d20d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attentions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "285b4c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attentions = attentions.reshape(nh, w_featmap, h_featmap)\n",
+    "# attentions = nn.functional.interpolate(attentions.unsqueeze(0), scale_factor=patch_size, mode=\"nearest\")[0].detach().cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a16db245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attentions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "10b1bd3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output_dir = 'output'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "73a2877f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "59a94374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4244e73f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0c4f494b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save attentions heatmaps\n",
+    "# os.makedirs(output_dir, exist_ok=True)\n",
+    "# torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(output_dir, \"img.png\"))\n",
+    "# for j in range(nh):\n",
+    "#     fname = os.path.join(output_dir, \"attn-head\" + str(j) + \".png\")\n",
+    "#     plt.imsave(fname=fname, arr=attentions[j], format='png')\n",
+    "#     print(f\"{fname} saved.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cab6a151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(args.output_dir, \"img.png\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7cd9671e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#     # save attentions heatmaps\n",
+    "#     os.makedirs(args.output_dir, exist_ok=True)\n",
+    "#     torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(args.output_dir, \"img.png\"))\n",
+    "#     for j in range(nh):\n",
+    "#         fname = os.path.join(args.output_dir, \"attn-head\" + str(j) + \".png\")\n",
+    "#         plt.imsave(fname=fname, arr=attentions[j], format='png')\n",
+    "#         print(f\"{fname} saved.\")\n",
+    "\n",
+    "#     if args.threshold is not None:\n",
+    "#         image = skimage.io.imread(os.path.join(args.output_dir, \"img.png\"))\n",
+    "#         for j in range(nh):\n",
+    "#             display_instances(image, th_attn[j], fname=os.path.join(args.output_dir, \"mask_th\" + str(args.threshold) + \"_head\" + str(j) +\".png\"), blur=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec617517",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66359bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56fefa93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
