--- a/VIT_101/notebooks/deformable-attention.ipynb
+++ b/VIT_101/notebooks/deformable-attention.ipynb
@@ -28,7 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## pip install natten, timm, einops"
+    "# !pip install torch==1.11.0+cpu torchvision==0.12.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu\n",
+    "# !pip install https://shi-labs.com/natten/wheels/cpu/torch1.11/natten-0.14.6%2Btorch1110cpu-cp310-cp310-linux_x86_64.whl\n",
+    "# !pip3 install einops"
    ]
   },
   {
@@ -508,252 +510,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe259b6f-5134-434e-8fb0-4cee2abad14a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5bab447e-4ee6-429a-af80-315f783ae23c",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2871108a",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "checkpt = torch.load('/home/surya/Downloads/dino_deitsmall16_pretrain_full_checkpoint.pth')['student']\n",
-    "state_dict = {k.replace(\"module.\", \"\"): v for k, v in checkpt.items()}\n",
-    "state_dict = {k.replace(\"backbone.\", \"\"): v for k, v in state_dict.items()}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01d55e3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_dict = {k:v for k, v in state_dict.items() if 'head.' not in k}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb45ba97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from PIL import Image\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# with open('../assets/test_image.jpg', 'rb') as f:\n",
-    "#     img = Image.open(f)\n",
-    "#     img = img.convert('RGB')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d232d9cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from torchvision import transforms as pth_transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a90a21b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# transform = pth_transforms.Compose([\n",
-    "#     pth_transforms.Resize([224, 224]),\n",
-    "#     pth_transforms.ToTensor(),\n",
-    "#     pth_transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
-    "# ])\n",
-    "# img = transform(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68100a88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5de4eba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # make the image divisible by the patch size\n",
-    "# w, h = img.shape[1] - img.shape[1] % patch_size, img.shape[2] - img.shape[2] % patch_size\n",
-    "# img = img[:, :w, :h].unsqueeze(0)\n",
+    "# load pretrained model\n",
+    "checkpoint = torch.load('/home/surya/Downloads/fpn_dat_t_backbone.pth')\n",
     "\n",
-    "# w_featmap = img.shape[-2] // patch_size\n",
-    "# h_featmap = img.shape[-1] // patch_size\n",
+    "from dat import DAT\n",
+    "model = DAT()\n",
+    "model.load_state_dict(checkpoint, strict=False)\n",
+    "model.eval();\n",
+    "model.to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c42611-1993-4edb-bf5e-05f8bb3e29f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = pth_transforms.Compose([\n",
+    "        pth_transforms.ToTensor(),\n",
+    "        pth_transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
+    "    ])\n",
     "\n",
-    "# _, attentions = vit(img)"
+    "def preprocess_image(image_path, reshape_size=(224, 224)):\n",
+    "    rgb_image = cv2.cvtColor(cv2.imread(image_path), cv2.COLOR_BGR2RGB)\n",
+    "    rgb_image = cv2.resize(rgb_image, reshape_size, interpolation=cv2.INTER_LINEAR)\n",
+    "    img = transform(rgb_image).unsqueeze(0)\n",
+    "    return rgb_image, img"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf3224bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attentions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dd24be2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # nh = attentions.shape[1] # number of head\n",
-    "\n",
-    "# # we keep only the output patch attention\n",
-    "# attentions = attentions[0, :, 0, 1:].reshape(nh, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8604d20d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attentions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "285b4c9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attentions = attentions.reshape(nh, w_featmap, h_featmap)\n",
-    "# attentions = nn.functional.interpolate(attentions.unsqueeze(0), scale_factor=patch_size, mode=\"nearest\")[0].detach().cpu().numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a16db245",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attentions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10b1bd3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output_dir = 'output'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73a2877f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59a94374",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torchvision"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4244e73f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c4f494b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # save attentions heatmaps\n",
-    "# os.makedirs(output_dir, exist_ok=True)\n",
-    "# torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(output_dir, \"img.png\"))\n",
-    "# for j in range(nh):\n",
-    "#     fname = os.path.join(output_dir, \"attn-head\" + str(j) + \".png\")\n",
-    "#     plt.imsave(fname=fname, arr=attentions[j], format='png')\n",
-    "#     print(f\"{fname} saved.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cab6a151",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(args.output_dir, \"img.png\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cd9671e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#     # save attentions heatmaps\n",
-    "#     os.makedirs(args.output_dir, exist_ok=True)\n",
-    "#     torchvision.utils.save_image(torchvision.utils.make_grid(img, normalize=True, scale_each=True), os.path.join(args.output_dir, \"img.png\"))\n",
-    "#     for j in range(nh):\n",
-    "#         fname = os.path.join(args.output_dir, \"attn-head\" + str(j) + \".png\")\n",
-    "#         plt.imsave(fname=fname, arr=attentions[j], format='png')\n",
-    "#         print(f\"{fname} saved.\")\n",
-    "\n",
-    "#     if args.threshold is not None:\n",
-    "#         image = skimage.io.imread(os.path.join(args.output_dir, \"img.png\"))\n",
-    "#         for j in range(nh):\n",
-    "#             display_instances(image, th_attn[j], fname=os.path.join(args.output_dir, \"mask_th\" + str(args.threshold) + \"_head\" + str(j) +\".png\"), blur=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec617517",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -761,15 +559,163 @@
    "id": "66359bdf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_img_path = '/home/surya/Downloads/cat.jpg'\n",
+    "rgb_image, img = preprocess_image(test_img_path)\n",
+    "print(f\"rgb_image shape = {rgb_image.shape}, img shape = {img.shape}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56fefa93",
+   "id": "021532ae-e747-4c61-a8e3-c8265488bc4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.imshow(rgb_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5438dc-ac05-42ae-b9cf-338e88a24410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attn_maps = []\n",
+    "for s in range(3,4):\n",
+    "    num_stage_attns = len(model.stages[s].attns)\n",
+    "    for a in range(1, num_stage_attns, 2):\n",
+    "        s_a_attn_map = model.stages[s].attns[a].attn\n",
+    "        attn_maps.append(s_a_attn_map.detach().cpu().numpy())\n",
+    "\n",
+    "cumulative_attn_scores = [einops.rearrange(x, 'nh ps k -> (nh ps) k') for x in attn_maps]\n",
+    "cumulative_attn_scores = np.concatenate(cumulative_attn_scores, axis=0)\n",
+    "keypt_scores = np.sum(cumulative_attn_scores, axis=0)\n",
+    "print(keypt_scores.shape)\n",
+    "\n",
+    "top_keys = np.argsort(keypt_scores)[::-1][:5]\n",
+    "print(top_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ab7882-c3ed-443c-a72c-b63656e3c865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stacked_deformed_pts = np.concatenate([einops.rearrange(x[0], 'g h w p -> g (h w) p') for x in deformed_pts], axis = 0)\n",
+    "print(stacked_deformed_pts.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9b3d37d-0dd2-4f6f-9942-789c5c5753d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(rgb_image)\n",
+    "plt.axis('off')\n",
+    "\n",
+    "for key_idx in top_keys:\n",
+    "    x_pixels = ((stacked_deformed_pts[:, key_idx, 0] + 1) * 112).astype(np.uint8)\n",
+    "    y_pixels = ((stacked_deformed_pts[:, key_idx, 1] + 1) * 112).astype(np.uint8)\n",
+    "    plt.scatter(x_pixels, y_pixels, s=keypt_scores[key_idx])\n",
+    "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07d70ae-c2d5-4467-b9aa-9f4bff83a966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.patches as patches\n",
+    "import IPython.display as Disp\n",
+    "from ipywidgets import Button, Layout\n",
+    "\n",
+    "class Visualize_Attention():\n",
+    "    def __init__(self, rgb_image, attention_map, patch_size =32, figsize=(5,5), cmap='jet'):\n",
+    "        self.rgb_image = rgb_image\n",
+    "        self.attention_map = attention_map\n",
+    "        self.ps = patch_size\n",
+    "        self.img_height, self.img_width, _ = self.rgb_image.shape\n",
+    "        \n",
+    "        self.fig = plt.figure(figsize=figsize)\n",
+    "        gs = self.fig.add_gridspec(nrows=6, ncols=6) # hspace =0, wspace=0\n",
+    "    \n",
+    "        # RGB image with gridlines\n",
+    "        self.rgb_axes = self.fig.add_subplot(gs[0:5, 1:5])\n",
+    "        self.rgb_axes.imshow(self.rgb_image)\n",
+    "        self.rgb_axes.set(xticks=[], yticks=[])\n",
+    "        for x in range(0, self.img_width, self.ps):\n",
+    "            self.rgb_axes.axvline(x, color='gray', linestyle='-', linewidth = 0.25)\n",
+    "        for y in range(0, self.img_height, self.ps):\n",
+    "            self.rgb_axes.axhline(y, color='gray', linestyle='-', linewidth = 0.25)        \n",
+    "\n",
+    "        # attention maps subplot\n",
+    "        self.attn_head_axes = []\n",
+    "        for row in range(6):\n",
+    "            if row == 5:\n",
+    "                cols = np.arange(6).tolist()\n",
+    "            else:\n",
+    "                cols = [0,5]\n",
+    "            for col in cols:\n",
+    "                head_axes = self.fig.add_subplot(gs[row, col])\n",
+    "                im = head_axes.imshow(np.zeros((self.img_height, self.img_width)))\n",
+    "                head_axes.set(xticks=[], yticks=[])\n",
+    "                self.attn_head_axes.append(head_axes)                \n",
+    "                \n",
+    "        self.fig.tight_layout()\n",
+    "                \n",
+    "        # triggers\n",
+    "        self.trigger = self.fig.canvas.mpl_connect('button_press_event', self.onclick)\n",
+    "        # visualize_button = Button(description = \"Visualize Attention Heads\", layout = Layout(positioning='top'))\n",
+    "        # Disp.display(visualize_button)\n",
+    "        # visualize_button.on_click(self.plot_patch_attention)\n",
+    "    \n",
+    "    def onclick(self, event):\n",
+    "        if event.inaxes == self.rgb_axes:\n",
+    "            self.patch_x = int(event.xdata // self.ps)\n",
+    "            self.patch_y = int(event.ydata // self.ps)\n",
+    "            self.rgb_axes.patches.clear()\n",
+    "            rect = patches.Rectangle((self.patch_x * self.ps, self.patch_y * self.ps), \n",
+    "                                      self.ps, self.ps, linewidth=1, ec='r', fc='none')\n",
+    "            self.rgb_axes.add_patch(rect)\n",
+    "    \n",
+    "    \n",
+    "    def plot_patch_attention(self, _):\n",
+    "        pass\n",
+    "#         # plot attention maps of all heads of corresponding patch\n",
+    "#         patch_attn = self.attention_map[:, self.patch_x * self.ps + self.patch_y]\n",
+    "#         patch_attn = patch_attn.reshape(-1, self.img_height // self.ps, self.img_width // self.ps)\n",
+    "# #         th_patch_attn = calculate_th_attention(patch_attn.reshape(6, -1), threshold=0.6)\n",
+    "# #         th_patch_attn = th_patch_attn.reshape(-1, self.img_height // self.ps, self.img_width // self.ps)\n",
+    "# #         th_patch_attn = cv2.blur(th_patch_attn,(10,10))\n",
+    "            \n",
+    "#         for hi, ax in enumerate(self.attn_head_axes):\n",
+    "#             ax.clear()\n",
+    "#             patch_attn_i = cv2.resize(patch_attn[hi], (self.img_width, self.img_height), cv2.INTER_LINEAR)\n",
+    "#             im = ax.imshow(patch_attn_i, cmap='jet')\n",
+    "#             ax.set(xticks=[], yticks=[])\n",
+    "#             self.fig.subplots_adjust(wspace=0, hspace=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df82f348-0a4d-41e9-91b7-bc2d89bfe6f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
+    "visualizer = Visualize_Attention(rgb_image, np.zeros((16, 49, 49)))"
+   ]
   },
   {
    "cell_type": "markdown",
